# av_media_player

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: publish.yml
android/: .gitignore  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/dev/xx/av_media_player/: AVMediaPlayerPlugin.kt  AvMediaPlayerPlugin.kt  SubtitlePainter.kt
example/: README.md  pubspec.yaml
example/android/: .gitignore  build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/dev/xx/av_media_player_example/: MainActivity.kt
example/ios/: .gitignore  Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: defines.dart  main.dart  main_advanced.dart  main_simple.dart  sources.dart  track_selector_view.dart  video_list_view.dart  video_player_view.dart
example/linux/: .gitignore  CMakeLists.txt  my_application.cc
example/macos/: .gitignore
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/windows/: .gitignore  CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: .gitignore  av_media_player.podspec
ios/Classes/: AVMediaPlayerPlugin.swift  AvMediaPlayerPlugin.swift
ios/av_media_player/: Package.swift
ios/av_media_player/Sources/av_media_player/: AvMediaPlayerPlugin.swift
lib/: index.dart  player.dart  types.dart  utils.dart  widget.dart
linux/: CMakeLists.txt  av_media_player_plugin.c
linux/include/av_media_player/: av_media_player_plugin.h
macos/: .gitignore  av_media_player.podspec
macos/Classes/: AVMediaPlayerPlugin.swift  AvMediaPlayerPlugin.swift
macos/av_media_player/: Package.swift
macos/av_media_player/Sources/av_media_player/: AvMediaPlayerPlugin.swift  PrivacyInfo.xcprivacy
windows/: CMakeLists.txt  av_media_player_plugin.cpp
windows/include/av_media_player/: av_media_player_plugin_c_api.h
